--- a/templates/meds/schedules.html
+++ b/templates/meds/schedules.html
@@ -26,7 +26,7 @@
     </div>
     <div class="mt-3 d-flex gap-2">
       <button class="btn btn-primary">Salvar agendamentos</button>
-      <a href="{{ url_for('meds.dashboard') }}" class="btn btn-outline-secondary">Voltar</a>
+      <a href="{{ url_for('dashboard') }}" class="btn btn-outline-secondary">Voltar</a>
     </div>
   </form>
   <hr>
